Adjust scroller masks to prevent content overlap
Provides a css-only implementation of scrolling masks.

Exposes the gradient mask as a mixin so components can vary top
dimension. Ordinal bins use a tighter padding.

Also fix scrolling in the NG Autocomplete NodeList.

--- a/src/styles/components/_node-list.scss
+++ b/src/styles/components/_node-list.scss
@@ -1,3 +1,5 @@
+$node-inset: 14px;  // approximate scaled margin + 'outer-trim' of a node
+
 .node-list {
   @include gpu;
   display: flex;
@@ -8,6 +10,8 @@
   min-height: 100%;
   width: 100%;
   padding-bottom: var(--base-node-size);
+
+  padding-top: $scroller-top-padding - $node-inset;
 
   &--hover,
   &--drag {
